--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: libsdl-org/setup-sdl@v1
-        with:
-          version: '3-latest'
+      - name: Install SDL3-Dev
+        run: |
+          sudo apt update
+          sudo apt install libsdl3-dev
       - name: Compile for Linux
         run: |
           mkdir build
@@ -47,13 +48,12 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: libsdl-org/setup-sdl@v1
-        with:
-          version: '3-latest'
+      - name: Install SDL3-Dev
+        run: brew install sdl3
       - name: Compile for macOS aarch64
         run: |
           mkdir build
-          g++ main.cpp -lSDL3 -o build/BrickBreaker
+          g++ main.cpp -I . -I /opt/homebrew/include -I /usr/local/include /opt/homebrew/lib/libSDL3.dylib -o build/BrickBreaker
           mv beep.wav build
       - name: Upload macOS aarch64 build
         uses: actions/upload-artifact@v4
@@ -64,17 +64,16 @@ jobs:
     runs-on: macos-15-intel
     steps:
       - uses: actions/checkout@v4
-      - uses: libsdl-org/setup-sdl@v1
-        with:
-          version: '3-latest'
+      - name: Install SDL3-Dev
+        run: brew install sdl3
       - name: Compile for macOS x86_64
         run: |
           mkdir build
-          g++ main.cpp -lSDL3 -o build/BrickBreaker
+          g++ main.cpp -I . -I /opt/homebrew/include -I /usr/local/include /opt/homebrew/lib/libSDL3.dylib -o build/BrickBreaker
           mv beep.wav build
       - name: Upload macOS x86_64 build
         uses: actions/upload-artifact@v4
         with:
-          name: macOS x86_64
+          name: macOS aarch64
           path: build/
         
