--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,18 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install SDL3-Dev
         run: |
-          sudo apt update
-          sudo apt install libsdl3-dev
+          curl -L -o sdl3.tar.gz https://github.com/libsdl-org/SDL/archive/refs/tags/release-3.4.0.tar.gz
+          tar -xvf sdl3.tar.gz
+          cd SDL-release-3.4.0
+          mkdir build
+          cd build
+          cmake ..
+          cmake --build . --config Release --parallel
+          sudo cmake --install . --config Release
       - name: Compile for Linux
         run: |
           mkdir build
-          g++ main.cpp -lSDL3 -o build/BrickBreaker.x86_64
+          g++ main.cpp -I . -I /usr/local/include /usr/local/lib/libSDL3.so -o build/BrickBreaker.x86_64
           mv beep.wav build
       - name: Upload Linux build
         uses: actions/upload-artifact@v4
@@ -69,7 +75,7 @@ jobs:
       - name: Compile for macOS x86_64
         run: |
           mkdir build
-          g++ main.cpp -I . -I /opt/homebrew/include -I /usr/local/include /opt/homebrew/lib/libSDL3.dylib -o build/BrickBreaker
+          g++ main.cpp -I . -I /opt/homebrew/include -I /usr/local/include /usr/local/lib/libSDL3.dylib -o build/BrickBreaker
           mv beep.wav build
       - name: Upload macOS x86_64 build
         uses: actions/upload-artifact@v4
